[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://scenes/Characters/Enemies/normalEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Characters/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Characters/Enemies/diverEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Characters/Enemies/ShootingEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/World.gd" type="Script" id=6]
[ext_resource path="res://scenes/EnemiesContainer.gd" type="Script" id=7]
[ext_resource path="res://scenes/deadZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/UI/HUD.tscn" type="PackedScene" id=9]

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 600, 1024 )

[node name="player container" type="Node2D" parent="."]

[node name="Player" parent="player container" instance=ExtResource( 3 )]
position = Vector2( 300, 1000 )

[node name="EnemiesContainer" type="Node2D" parent="."]
script = ExtResource( 7 )
enemies = [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ]

[node name="SpawnPositions" type="Node2D" parent="EnemiesContainer"]

[node name="SpawnPosition_01" type="Position2D" parent="EnemiesContainer/SpawnPositions"]
position = Vector2( 70, -50 )

[node name="SpawnPosition_02" type="Position2D" parent="EnemiesContainer/SpawnPositions"]
position = Vector2( 170, -50 )

[node name="SpawnPosition_03" type="Position2D" parent="EnemiesContainer/SpawnPositions"]
position = Vector2( 270, -50 )

[node name="SpawnPosition_04" type="Position2D" parent="EnemiesContainer/SpawnPositions"]
position = Vector2( 370, -50 )

[node name="SpawnPosition_05" type="Position2D" parent="EnemiesContainer/SpawnPositions"]
position = Vector2( 470, -50 )

[node name="SpawnTimer" type="Timer" parent="EnemiesContainer"]
wait_time = 2.0
autostart = true

[node name="deadzone" parent="." groups=["deadzone"] instance=ExtResource( 8 )]
position = Vector2( 300, -150 )

[node name="deadzone2" parent="." groups=["deadzone"] instance=ExtResource( 8 )]
position = Vector2( 300, 1100 )

[node name="HUD" parent="." instance=ExtResource( 9 )]

[connection signal="player_took_damage" from="player container/Player" to="." method="_on_Player_player_took_damage"]
[connection signal="spawnLaser" from="player container/Player" to="." method="spawnLaser"]
[connection signal="spawnEnemy" from="EnemiesContainer" to="." method="_on_EnemiesContainer_spawnEnemy"]
[connection signal="timeout" from="EnemiesContainer/SpawnTimer" to="EnemiesContainer" method="_on_SpawnTimer_timeout"]
